fix color and spacing

--- a/floating-labels.css
+++ b/floating-labels.css
@@ -15,7 +15,7 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: #0984e3;
 }
 
 .form-signin {
@@ -23,6 +23,7 @@ body {
   max-width: 420px;
   padding: 15px;
   margin: auto;
+  background-color: white;
 }
 
 .form-label-group {
